# thermodynamics-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  users_guide.txt
examples/: basic_usage.py
tests/: test_first_law.py  test_json_io.py  test_system.py
thermodynamics_sdk/: __init__.py  core.py
